--- a/Android/Dwells/app/build.gradle
+++ b/Android/Dwells/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "me.madhvani.dwells"
         minSdkVersion 21
         targetSdkVersion 21
-        versionCode 1
-        versionName "1.0"
+        versionCode 0
+        versionName "alpha"
     }
     buildTypes {
         release {
