--- a/Android/Dwells/app/src/main/AndroidManifest.xml
+++ b/Android/Dwells/app/src/main/AndroidManifest.xml
@@ -43,6 +43,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".ui.KotDetail"
+            android:label="@string/title_activity_kot_detail" >
+        </activity>
     </application>
 
 </manifest>
