--- a/Android/Dwells/app/src/main/AndroidManifest.xml
+++ b/Android/Dwells/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        <uses-library android:name="com.google.android.maps" />
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
