--- a/Android/Dwells/app/build.gradle
+++ b/Android/Dwells/app/build.gradle
@@ -26,9 +26,9 @@ dependencies {
     compile 'com.android.support:appcompat-v7:22.0.0'
     compile 'com.squareup.retrofit:retrofit:1.9.0'
     compile 'com.jakewharton:butterknife:6.1.0'
-
+    compile 'com.android.support:recyclerview-v7:21.0.+'
     compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
-
+    compile 'com.android.support:cardview-v7:21.0.2'
     compile 'com.google.dagger:dagger:2.0'
     apt 'com.google.dagger:dagger-compiler:2.0'
     provided 'org.glassfish:javax.annotation:10.0-b28'
