--- a/Android/Dwells/app/build.gradle
+++ b/Android/Dwells/app/build.gradle
@@ -29,6 +29,8 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:21.0.+'
     compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
     compile 'com.android.support:cardview-v7:21.0.2'
+    compile 'com.nineoldandroids:library:2.4.0+'
+    compile "commons-io:commons-io:2.4"
     compile 'com.google.dagger:dagger:2.0'
     apt 'com.google.dagger:dagger-compiler:2.0'
     provided 'org.glassfish:javax.annotation:10.0-b28'
