--- a/Android/Dwells/app/src/main/AndroidManifest.xml
+++ b/Android/Dwells/app/src/main/AndroidManifest.xml
@@ -15,10 +15,11 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ic_icon_house"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@android:style/Theme.Holo.Light" >
         <uses-library android:name="com.google.android.maps" />
+
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
@@ -47,6 +48,10 @@
         <activity
             android:name=".ui.KotDetail"
             android:label="@string/title_activity_kot_detail" >
+        </activity>
+        <activity
+            android:name=".ui.RouteActivity"
+            android:label="@string/title_activity_route" >
         </activity>
     </application>
 
